netradius-spring-errors-sample/src/main/java/com/netradius/spring/errors/sample/SpringErrorsSampleApplication.java
package com.netradius.spring.errors.sample;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class SpringErrorsSampleApplication {

  public static void main(String[] args) {
    SpringApplication.run(SpringErrorsSampleApplication.class, args);
  }

}
